<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbarStyle="insideOverlay"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/message_compose_recipients" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:minHeight="50dp">

                <EditText
                    android:id="@+id/subject"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message_compose_subject_hint"
                    android:inputType="textEmailSubject|textAutoCorrect|textCapSentences"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:background="@android:color/transparent"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    style="@style/ComposeEditTextLarge"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <!--
                Empty container for storing attachments. We'll stick
                instances of message_compose_attachment.xml in here.
            -->

            <LinearLayout
                android:id="@+id/attachments"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <!-- We have to use "wrap_content" (not "0dip") for "layout_height", otherwise the
                 EditText won't properly grow in height while the user is typing the message -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#509f1a71"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/template_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/template_title" />

                <Spinner
                    android:id="@+id/templates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/apply_template"
                    android:text="@string/apply_template"
                    android:textSize="10sp"
                    android:padding="0dip"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#509f1a71"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/translate_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Translate  " />

                <Spinner
                    android:id="@+id/translatelangs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/apply_translate"
                    android:text="Apply Translation"
                    android:textSize="10sp"
                    android:padding="0dip"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#509f1a71"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/apply_thesaurus"
                    android:text="Thesaurus"
                    android:textSize="10sp"
                    android:padding="0dip"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#509f1a71"
                android:orientation="horizontal" >

            </LinearLayout>

            <view
                class="com.fsck.k9.ui.EolConvertingEditText"
                android:id="@+id/message_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/message_compose_content_hint"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:imeOptions="actionDone|flagNoEnterAction"
                android:minLines="3"
                style="@style/ComposeEditTextLarge"
                />

            <view
                class="com.fsck.k9.ui.EolConvertingEditText"
                android:id="@+id/upper_signature"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:minLines="0"
                android:hint="@string/message_compose_signature_hint"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/quoted_text_show"
                android:text="@string/message_compose_show_quoted_text_action"
                android:textSize="16sp"
                android:padding="0dip"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <!-- Quoted text bar -->
            <RelativeLayout
                android:id="@+id/quoted_text_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <view
                    class="com.fsck.k9.ui.EolConvertingEditText"
                    android:id="@+id/quoted_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:minLines="3"
                    android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <com.fsck.k9.view.MessageWebView
                    android:id="@+id/quoted_html"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent" />

                <LinearLayout
                    android:id="@+id/quoted_text_buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true">

                    <ImageButton
                        android:id="@+id/quoted_text_edit"
                        android:contentDescription="@string/message_compose_description_edit_quoted_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dip"
                        android:background="@drawable/btn_edit" />

                    <ImageButton
                        android:id="@+id/quoted_text_delete"
                        android:contentDescription="@string/message_compose_description_delete_quoted_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_dialog" />

                </LinearLayout>

            </RelativeLayout>

            <view
                class="com.fsck.k9.ui.EolConvertingEditText"
                android:id="@+id/lower_signature"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:minLines="0"
                android:hint="@string/message_compose_signature_hint"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
