...
                android:title="@string/sort_by_attach"/>
        </menu>
    </item>

    <!-- always -->
    <item
        android:id="@+id/compose"
        android:alphabeticShortcut="c"
        android:icon="?attr/iconActionCompose"
        android:showAsAction="ifRoom"
        android:title="@string/compose_action"/>

    <!-- MessageList -->
...
